--- a/login.html
+++ b/login.html
@@ -17,9 +17,9 @@
             <h2 class="log">
                 GhostingFr<span>.in</span>
             </h2>
-            <p class="text-muted">Already have an Account
+            <p class="text-muted">New User ? Create Your account 
             </p>
-            <label class="btn btn-primary" for="signup"><a href="/login.html">login</a></label>
+            <label class="btn btn-primary" for="signup"><a href="/signup.html">SignUp</a></label>
         </div>
     </nav>
 
@@ -34,22 +34,14 @@
                 </h2></p>
             </a>
             <a class="login-item">
-             <input type="email" class="login-item" placeholder="Email" maxlength="15" minlength="6" required><br>
-            </a>
-            <a class="login-item">
-             <input type="text" class="login-item" id="Name" placeholder="Your Name" maxlength="20" minlength="5" required><br>
-            </a>
-            <a class="login-item">
-             <input type="text" class="login-item" id="Username" placeholder="Username" maxlength="15" minlength="8" required><br>
+             <input type="text" class="login-item" placeholder="Username , Email" maxlength="15" minlength="6" required><br>
             </a>
             <a class="login-item">
              <input type="password" class="login-item" id="password" placeholder="Password" maxlength="15" minlength="8" required><br>
             </a>
-            <a class="login-item">
-             <input type="password" class="login-item" id="password" placeholder="Repeat Password" maxlength="15" minlength="8" required><br>
-            </a>
           </div>
-             <label class="btn btn-primary" for="signup">SignUp</label><br>
+             <label class="btn btn-primary" for="signup">Log In</label><br>
+             <p><a href="#">forgot password ?</a></p>
             </form>
         </div>
     </div>
@@ -58,7 +50,7 @@
  <footer>
     <div class="container">
         <li><a href="#">About </a></li>
-        <li> <a href="#">ChangeLog </a></li>
+        <li> <a href="/home.html">EarlyAccess </a></li>
         <li><a href="#"> Support </a></li>
     </div>
  </footer>
